--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
+body{
+    text-align: center;
+    background-color:rgb(212, 140, 209);
+    font-family: Impact, Charcoal, sans-serif;
+    color: rgb(240, 238, 155);
+}
+.button-container{
+    margin: auto;
+    margin-top: 10px;
+    width: 400px;
 
+}
+button{
+    margin-left: 5px;
+    font-size: 10px;
+    color: rgb(88, 88, 88);
+    padding: 5px 7px;
+    background-color: WhiteSmoke;
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+} 
 .container{
     margin: auto;
-    margin-top: 50px;
-    width: 600px;
-    height: 600px;
-    border: 10px solid #8F8EBF;
+    margin-top: 15px;
+    width: 500px;
+    height: 500px;
+    border: 10px solid red;
     font-size: 0;
+    background-color: white;
 }
 
 .square{
     display: inline-block;
-    border: 1px solid #8F8EBF;
     box-sizing: border-box;
 }
+
 
